Allow for overriding scheduler config
- introduce openshift_master_scheduler_predicates and
  openshift_master_scheduler_priorities to override the default scheduler
  predicates and priorities

- switch default scheduler priorities to use SelectorSpreadPriority instead
  of ServiceSpreadingPriority

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -65,9 +65,9 @@
   - restart master controllers
 
 - name: Create the scheduler config
-  template:
+  copy:
+    content: "{{ scheduler_config | to_nice_json }}"
     dest: "{{ openshift_master_scheduler_conf }}"
-    src: scheduler.json.j2
     backup: true
   notify:
   - restart master
