--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -1,9 +1,7 @@
 ---
 
 - name: restart docker
-  service:
-    name: docker
-    state: restarted
+  command: systemctl restart docker
   when: not docker_service_status_changed | default(false) | bool
 
 - name: restart udev
