--- a/roles/openshift_cloud_provider/meta/main.yml
+++ b/roles/openshift_cloud_provider/meta/main.yml
@@ -1,10 +1,10 @@
 ---
 galaxy_info:
-  author: Jason DeTiberus
-  description: OpenShift Common
+  author: Sylvain Baubeau, Andrew Butcher
+  description: OpenShift Cloud Provider
   company: Red Hat, Inc.
   license: Apache License, Version 2.0
-  min_ansible_version: 1.7
+  min_ansible_version: 1.9
   platforms:
   - name: EL
     versions:
@@ -12,6 +12,4 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
-- role: os_firewall
 - role: openshift_facts
-- role: openshift_repos
