--- a/roles/openshift_common/tasks/main.yml
+++ b/roles/openshift_common/tasks/main.yml
@@ -28,8 +28,12 @@
       use_manageiq: "{{ openshift_use_manageiq | default(None) }}"
       data_dir: "{{ openshift_data_dir | default(None) }}"
 
+# Using oo_image_tag_to_rpm_version here is a workaround for how
+# openshift_version is set.  That value is computed based on either RPM
+# versions or image tags.  openshift_common's usage requires that it be a RPM
+# version and openshift_cli expects it to be an image tag.
 - name: Install the base package for versioning
-  action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') }} state=present"
+  action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') | oo_image_tag_to_rpm_version }} state=present"
   when: not openshift.common.is_containerized | bool
 
 # This invocation also updates the version facts which are necessary
