--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -49,7 +49,12 @@
 - set_fact:
     docker_downgrade: True
   when: " docker_version < installed_docker_version.stdout and docker_version != ''"
-  
+
+- name: Remove deferred removal and deletion for 1.8.2 downgrades
+  command: >
+    sed -i 's/--storage-opt dm.use_deferred_deletion=true//' /etc/sysconfig/docker-storage
+  when: docker_downgrade | bool and docker_version == '1.8.2'
+
 - name: Downgrade docker
   command: >
     {{ ansible_pkg_mgr }} downgrade -y docker{{ '-' + docker_version if docker_version != '' else '' }}
