Bug 1322788 - The IMAGE_VERSION wasn't added to atomic-openshift-master-api and atomic-openshift-master-controllers

--- a/roles/openshift_master/defaults/main.yml
+++ b/roles/openshift_master/defaults/main.yml
@@ -28,3 +28,5 @@ os_firewall_deny:
   port: 8080/tcp
 - service: former etcd peer port
   port: 7001/tcp
+
+openshift_version: "{{ openshift_pkg_version | default(openshift_image_tag) | default(openshift.common.image_tag) | default('') }}"
