--- a/roles/os_zabbix/vars/template_heartbeat.yml
+++ b/roles/os_zabbix/vars/template_heartbeat.yml
@@ -11,3 +11,8 @@ g_template_heartbeat:
     expression: '{Template Heartbeat:heartbeat.ping.nodata(20m)}=1'
     priority: avg
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_node_heartbeat.asciidoc'
+
+  - name: 'Heartbeat.ping has failed (60 min) on {HOST.NAME}'
+    expression: '{Template Heartbeat:heartbeat.ping.nodata(60m)}=1'
+    priority: high
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_node_heartbeat.asciidoc'
