Remove openshift_common dep from openshift_storage_nfs

--- a/roles/openshift_storage_nfs/meta/main.yml
+++ b/roles/openshift_storage_nfs/meta/main.yml
@@ -11,5 +11,5 @@ galaxy_info:
     - 7
 dependencies:
 - { role: os_firewall }
-- { role: openshift_common }
+- { role: openshift_facts }
 - { role: openshift_repos }
