--- a/roles/openshift_common/tasks/main.yml
+++ b/roles/openshift_common/tasks/main.yml
@@ -36,12 +36,8 @@
   action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') | oo_image_tag_to_rpm_version }} state=present"
   when: not openshift.common.is_containerized | bool
 
-# This invocation also updates the version facts which are necessary
-# for setting the hostname below.
-- name: openshift_facts
+- name: Set version facts
   openshift_facts:
-    role: hosted
-    openshift_env: "{{ hostvars[inventory_hostname] | oo_openshift_env }}"
 
 # For enterprise versions < 3.1 and origin versions < 1.1 we want to set the
 # hostname by default.
