--- a/roles/openshift_master/meta/main.yml
+++ b/roles/openshift_master/meta/main.yml
@@ -16,3 +16,4 @@ dependencies:
 - role: openshift_cli
 - role: openshift_cloud_provider
 - role: openshift_master_facts
+- role: openshift_hosted_facts
