Fetching the current version a little more carefully
Previously we were trying to use the running container to get the current
version.  There are cases in which the Master or Node may not be running during
upgrade.  It's actually safer to just run the container to fetch the version
that would be launch if the container were running.  Then we pull the image to
see what the latest image contains.

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -151,6 +151,10 @@
 
   - fail:
       msg: Verifying the correct version was found
+    when: g_aos_versions.curr_version == ""
+
+  - fail:
+      msg: Verifying the correct version was found
     when: verify_upgrade_version is defined and g_new_version != verify_upgrade_version
 
   - include_vars: ../../../../../roles/openshift_master/vars/main.yml
