Fix legacy cli_docker_* vars not migrating.
No hosts were matching this renamed host group, so the oo_lookup module
was not being triggered to migrate these to their new openshift_docker
prefix.

--- a/playbooks/common/openshift-cluster/config.yml
+++ b/playbooks/common/openshift-cluster/config.yml
@@ -4,7 +4,7 @@
 - include: validate_hostnames.yml
 
 - name: Set oo_options
-  hosts: oo_hosts_to_config
+  hosts: oo_all_hosts
   tasks:
   - set_fact:
       openshift_docker_additional_registries: "{{ lookup('oo_option', 'docker_additional_registries') }}"
